--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <!-- Fron t banner section Start -->
+   <section class="banner">
+       <div>
+           <h1>Conmebol Copa America 2021</h1>
+           <a href="">Watch Live</a>
+       </div>
+   </section>
 </body>
 </html>
