banner part edited

--- a/index.html
+++ b/index.html
@@ -5,40 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2 | Football website</title>
-
-   <!-- font style roboto slab  -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-
-   <!-- font style poppins -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <!-- icon style  -->
+   <!-- font awesome icon  -->
     <script src="https://kit.fontawesome.com/309e97d3cd.js" crossorigin="anonymous"></script>
     <!-- stylesheet  -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
     <!-------------------
-        navigation part 
+        Banner part 
     ---------------------->
     <header>
-        <div class="navbar">
-            <div class="nav-title">
+        <div class="banner">
+            <div class="banner-title">
                 <div>
                  <h1>Conmebol</h1> 
                     <h1>Copa America</h1>
                     <h1>2021</h1>
                 </div>
-                <div class="nav-btn">
+                <div class="banner-btn">
                     <a href="">Watch live <i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
-            <div class="nav-img">
-                <img src="images/banner.png" alt="Banner">
+            <div class="banner-img">
+                <img src="images/banner.png" alt="">
             </div>
         </div>
     </header>
