--- a/index.html
+++ b/index.html
@@ -32,6 +32,105 @@
             </div>
         </div>
     </header>
+<!-- players section-->
+
+    <main>
+        
+        <section class="container">
+            <div class="players">
+
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-1.png" alt="Player1">
+                    </div>
+                   <div class="player-desc">
+                    <h3>Neymar Jr</h3>
+                    <p>Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club .paris.</p>
+                   </div>
+                </div>
+
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-2.png" alt="Player1">
+                    </div>
+                    <div class="player-desc">
+                        <h3>Lionel Messi</h3>
+                    <p> Also known as Leo Messi, (born 24 June 1987) is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the</p>
+                    </div>
+                </div>
+
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-3.png" alt="Player1">
+                    </div>
+                   <div class="player-desc">
+                    <h3>Cristiano Ronaldo</h3>
+                    <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains</p>
+                   </div>
+                </div>
+
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-4.png" alt="Player1">
+                    </div>
+                    <div class="player-desc">
+                        <h3>Paulo Dybala</h3>
+                    <p>Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina</p>
+                    </div>
+                </div>
+
+                <div class="player">
+                   <div class="player-img">
+                    <img src="images/players/player-5.png" alt="Player1">
+                   </div>
+                   <div class="player-desc">
+                    <h3>Mesut Ozil</h3>
+                    <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King"</p>
+                   </div>
+                </div>
+
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-6.png" alt="Player1">
+                    </div>
+                    <div class="player-desc">
+                        <h3>Mauro Icardi</h3>
+                    <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                    </div>
+                </div>
+
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-7.png" alt="Player1">
+                    </div>
+                   <div class="player-desc">
+                    <h3>Di Maria</h3>
+                    <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as a attacking midfielder.</p>
+                   </div>
+                </div>
+
+                <div class="player">
+                    <div class="player-img">
+                        <img src="images/players/player-8.png" alt="Player1">
+                    </div>
+                    <div class="player-desc">
+                        <h3>Kylian Mbappe</h3>
+                    <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+                    </div>
+                </div>
+
+                <div class="player">
+                  <div class="player-img">
+                    <img src="images/players/player-9.png" alt="Player1">
+                  </div>
+                   <div class="player-desc">
+                    <h3>Mohammed Salah</h3>
+                    <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team.</p>
+                   </div>
+                </div>
+
+            </div>
+        </section>
 
 </body>
 </html>
