--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
 
             </div>
         </section>
-
+<!-------------- 
+       footer part  
+    -------------->
+    <footer class="container">
+        <div class="footer-img">
+            <img src="images/Logo.png" alt="logo">
+        </div>
+        <div> 
+            <i class="fab fa-instagram social-icon"></i>
+            <i class="fab fa-twitter social-icon"></i>
+            <i class="fab fa-whatsapp social-icon"></i>
+            <i class="fab fa-youtube social-icon"></i>
+            <p>Copyright &copy 2022 Football</p>
+        </div>
+    </footer>
 </body>
 </html>
