some khuchra edit

--- a/index.html
+++ b/index.html
@@ -131,6 +131,24 @@
 
             </div>
         </section>
+        <!-- highlights Area  -->
+        <section class="container">
+            <div class="highlights">
+               <div class="description">
+                   <div class="highlights-title">
+                    <h1>All Highlights</h1>
+                   <h1> Copa America 2021</h1>
+                   <p>Watch more from the Copa America matches. Enjoy the excited clips of ur favourate match</p>
+                   </div>
+                   <div class="btn">
+                       <a href="">Watch live <i class="fas fa-arrow-right"></i></a>
+                   </div>
+               </div>
+               <div class="match-img">
+                   <img src="images/match.png" alt="">
+               </div>
+           </div>
+        </section>
 <!-------------- 
        footer part  
     -------------->
