contact us added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,21 @@
                </div>
            </div>
         </section>
+        <!-- sponser area  -->
+        <section class="container sponser-area">
+            <h1 class="sponser-title">Our Sponsor</h1>
+            <div class="company-name">
+                <a id="bcb" href="">BCB</a>
+                <a id="nokia" href=""> Nokia</a>
+                <a id="hero" href="">Hero</a>
+                
+            </div>
+     </section>
+<!-- contact us section -->
+     <section class="container sponser-area">
+        <h1 class="sponser-title">Contact us</h1>
+        <h3>Thealamin24@gmail.com</h3>
+
 <!-------------- 
        footer part  
     -------------->
