text color added

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 <!-- contact us section -->
      <section class="container sponser-area">
         <h1 class="sponser-title">Contact us</h1>
-        <h3>Thealamin24@gmail.com</h3>
+        <h3 style="color: orangered;">Thealamin24@gmail.com</h3>
+     </section>
 
 <!-------------- 
        footer part  
