--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
             </div>
      </section>
 <!-- contact us section -->
-     <section class="container sponser-area">
-        <h1 class="sponser-title">Contact us</h1>
+     <section class="container contact-area">
+        <h1 class="contact-title">Contact us</h1>
         <h3 style="color: orangered;">Thealamin24@gmail.com</h3>
      </section>
 
